bug: fixed overflow bug

--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -12,6 +12,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 /*  ---------- Background ----------  */
